--- a/src/main/resources/templates/catalogos/errores.html
+++ b/src/main/resources/templates/catalogos/errores.html
@@ -11,6 +11,19 @@
 	<div th:replace="index :: menu"></div>
 	<div th:replace="index :: container"></div>
 
+	<!-- ICONOS NOTIFICACION -->
+	<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+	  <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+	    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+	  </symbol>
+	  <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
+	    <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+	  </symbol>
+	  <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+	    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+	  </symbol>
+	</svg>
+
 	<main class="main-container-wk">
 		<div class="container-fluid padding-none container-static">
 			<div class="row">
@@ -22,14 +35,30 @@
 							
 							<div class="btn-group" role="group" aria-label="Basic example">
 								<button type="button" class="btn btn-info m-0"
-									data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+									data-bs-toggle="modal" data-bs-target="#addModal">
 									+</button>
 							</div>
 						</div>
 						<div class="card-body p-4">
 							<div class="table-responsive">
-								<table
-									class="table align-items-center justify-content-center mb-0 table-striped table-bordered">
+								<!-- NOTIFICATIONS -->
+								<div class="alert alert-success d-flex align-items-center" role="alert" th:if="${success != null}">
+									<svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:">
+										<use xlink:href="#check-circle-fill" /></svg>
+									<div th:text="${success}"></div>
+								</div>
+								<div class="alert alert-warning d-flex align-items-center" role="alert" th:if="${warning != null}">
+									<svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:">
+										<use xlink:href="#exclamation-triangle-fill" /></svg>
+									<div th:text="${warning}"></div>
+								</div>
+								<div class="alert alert-danger d-flex align-items-center" role="alert" th:if="${error != null}">
+									<svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
+										<use xlink:href="#exclamation-triangle-fill" /></svg>
+									<div th:text="${error}"></div>
+								</div>
+								<!-- NOTIFICATIONS -->
+								<table class="table align-items-center justify-content-center mb-0 table-striped table-bordered">
 									<thead>
 										<tr>
 											<th width="5px"></th>
@@ -40,12 +69,11 @@
 											<th class="text-uppercase text-primary tncb s2 ps-2">Etapa</th>
 											<th class="text-uppercase text-primary ps-2" width="50px"></th>
 											<th class="text-uppercase text-primary ps-2" width="50px"></th>
-											<th class="text-uppercase text-primary ps-2" width="50px"></th>
 										</tr>
 									</thead>
 									<tbody>
 										<tr th:if="${list.size() == 0}">
-											<td colspan="9" align="center"><span class="tncb s3">- No se encontraron registros -</span></td>
+											<td colspan="7" align="center"><span class="tncb s3">- No se encontraron registros -</span></td>
 										</tr>
 										<tr th:if="${list.size() > 0}" th:each="o, itr: ${list}">
 											<td><span class="text-xg tnrr s1" th:text="${itr.count}"></span></td>
@@ -54,13 +82,19 @@
 											<td><span class="text-xg tnrr s1" th:text="${o.persistencia}"></span></td>
 											<td><span class="text-xg tnrr s1" th:text="${o.intentos}"></span></td>
 											<td><span class="text-xg tnrr s1" th:text="${o.etapa.descripcion}"></span></td>
-											<td align="center">
+											<td align="center" style="display:none;">
 												<div class="form-check form-switch">
 													<input class="form-check-input" type="checkbox"
 												role="switch" id="flexSwitchCheckDefault"></div>
 											</td>
-											<td align="center"><img src="./resources/img/edit.svg" width="20px" /></td>
-											<td align="center"><img src="./resources/img/delete.svg" width="20px" /></td>
+											<td align="center">
+												<img class="edit" src="./resources/img/edit.svg" width="20px" onclick="$('#modalForm').modal('show');" style="cursor: pointer;" />
+												<input type="hidden" id="idEdit" th:value="${o.clave}" />
+											</td>
+											<td align="center">
+												<img class="delete" src="./resources/img/delete.svg" width="20px" style="cursor: pointer;" />
+												<input type="hidden" id="id" th:value="${o.clave}" />
+											</td>
 										</tr>
 									</tbody>
 								</table>
@@ -82,61 +116,209 @@
 	</main>
 
 
-	<!-- Modal -->
-	<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static"
+
+	<!-- Modal Add -->
+	<div class="modal fade" id="addModal" data-bs-backdrop="static"
 		data-bs-keyboard="false" tabindex="-1"
 		aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="staticBackdropLabel">Alta</h5>
+			<form th:action="@{/save/error}" class="needs-validation" novalidate method="post" style="width: 100%;">
+				<div class="modal-header" style="background:#0077b5;">
+					<h5 class="modal-title text-pr text-primary tncb s4" style="color:#FFF !important;">Nuevo Registro</h5>
 					<button type="button" class="btn-close" data-bs-dismiss="modal"
 						aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-					<div class="row g-2 mt-2">
+					<div class="row g-2">
 						<div class="col-md">
 							<div class="mb-3">
-								<label for="exampleFormControlInput1" class="form-label tncb s1">Clave</label>
-								<input type="text" class="form-control" id="clave">
+								<label for="clave" class="form-label tncb s1">Clave</label> 
+								<input type="text" class="form-control" name="clave" id="clave" required>
+								<div class="invalid-feedback">Proporciona una clave v&aacute;lida.</div>
 							</div>
 						</div>
 						<div class="col-md">
 							<div class="mb-3">
-								<label for="exampleFormControlInput1" class="form-label tncb s1">Intentos</label>
-								<input type="text" class="form-control" id="clave">
+								<label for="intentos" class="form-label tncb s1">Intentos</label> 
+								<input type="number" class="form-control" name="intentos" id="intentos" required>
+								<div class="invalid-feedback">El campo intentos es obligatorio.</div>
 							</div>
 						</div>
 					</div>
 					<div class="row g-2">
 						<div class="col-md">
 							<div class="mb-3">
-								<label for="exampleFormControlInput1" class="form-label tncb s1">Persistencia</label>
-								<input type="text" class="form-control" id="clave">
+								<label for="persistencia" class="form-label tncb s1">Persistencia</label> 
+								<input type="text" class="form-control" name="persistencia" id="persistencia" maxlength="1" required>
+								<div class="invalid-feedback">El campo persistencia es obligatorio.</div>
 							</div>
 						</div>
 						<div class="col-md">
 							<div class="mb-3">
-								<label for="exampleFormControlInput1" class="form-label tncb s1">Plataforma</label>
-								<select class="form-select form-select-lg mb-3" aria-label="Plataforma">
-								  <option selected>--</option>
-								  <option value="1">PRIME VIDEO</option>
+								<label class="form-label tncb s1">Etapa</label>
+								<select id="etapa" name="etapa" class="form-select form-select-lg mb-3" required >
+									<option selected disabled value="">...</option>
+									<option th:each="p, itr: ${listEtapas}" th:value="${p.clave}" th:text="${p.descripcion}"></option>
 								</select>
+								<div class="invalid-feedback">Selecciona una etapa.</div>
 							</div>
 						</div>
 					</div>
 					<div class="mb-3">
-						<label for="exampleFormControlTextarea1" class="form-label tncb s1">Descripci&oacute;n</label>
-						<textarea class="form-control" id="descripcion" rows="3"></textarea>
+						<label for="descripcion" class="form-label tncb s1">Descripci&oacute;n</label> 
+						<input type="text" class="form-control" style="height: 60px;" name="descripcion" id="descripcion" required>
+						<div class="invalid-feedback">Proporciona una descripci&oacute;n v&aacute;lida.</div>
 					</div>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn btn-danger"
-						data-bs-dismiss="modal">Cancelar</button>
-					<button type="button" class="btn btn-primary">Aceptar</button>
+					<button type="button" class="btn btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
+					<button type="submit" class="btn btn-primary">Aceptar</button>
 				</div>
+			</form>
 			</div>
 		</div>
 	</div>
+	
+	
+	<!-- Modal Delete -->
+	<div class="modal fade" id="deleteModal" tabindex="-1"
+		data-bs-backdrop="static" data-bs-keyboard="false"
+		aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+			<form th:action="@{/delete/error}" method="post" style="width: 100%;">
+				<div class="modal-header" style="background:#aa0000;">
+					<h5 class="modal-title" style="color:#FFF !important;">Eliminar Registro</h5>
+				</div>
+				<div class="modal-body">
+					<span class="tnrr s1">&iquest;Est&aacute; seguro de eliminar el registro?</span>
+					<input type="hidden" name="id" id="id" />
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+					<button type="submit" class="btn btn-danger">Eliminar</button>
+				</div>
+			</form>
+			</div>
+		</div>
+	</div>
+
+
+	<!-- Modal Edit -->
+	<div class="modal fade" id="editModel" data-bs-backdrop="static"
+		data-bs-keyboard="false" tabindex="-1"
+		aria-labelledby="staticBackdropLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+			<form th:action="@{/update/error}" class="needs-validation" novalidate method="post" style="width: 100%;">
+				<div class="modal-header" style="background:#0077b5;">
+					<h5 class="modal-title text-pr text-primary tncb s4" style="color:#FFF !important;">Editar Registro</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal"
+						aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<div class="row g-2">
+						<div class="col-md">
+							<div class="mb-3">
+								<label for="clave" class="form-label tncb s1">Clave</label> 
+								<input type="text" class="form-control" name="clave" id="clave" required>
+								<div class="invalid-feedback">Proporciona una clave v&aacute;lida.</div>
+							</div>
+						</div>
+						<div class="col-md">
+							<div class="mb-3">
+								<label for="intentos" class="form-label tncb s1">Intentos</label> 
+								<input type="number" class="form-control" name="intentos" id="intentos" required>
+								<div class="invalid-feedback">El campo intentos es obligatorio.</div>
+							</div>
+						</div>
+					</div>
+					<div class="row g-2">
+						<div class="col-md">
+							<div class="mb-3">
+								<label for="persistencia" class="form-label tncb s1">Persistencia</label> 
+								<input type="text" class="form-control" name="persistencia" id="persistencia" maxlength="1" required>
+								<div class="invalid-feedback">El campo persistencia es obligatorio.</div>
+							</div>
+						</div>
+						<div class="col-md">
+							<div class="mb-3">
+								<label class="form-label tncb s1">Etapa</label>
+								<select id="etapa" name="etapa" class="form-select form-select-lg mb-3" required >
+									<option selected disabled value="">...</option>
+									<option th:each="p, itr: ${listEtapas}" th:value="${p.clave}" th:text="${p.descripcion}"></option>
+								</select>
+								<div class="invalid-feedback">Selecciona una etapa.</div>
+							</div>
+						</div>
+					</div>
+					<div class="mb-3">
+						<label for="descripcion" class="form-label tncb s1">Descripci&oacute;n</label> 
+						<input type="text" class="form-control" style="height: 60px;" name="descripcion" id="descripcion" required>
+						<div class="invalid-feedback">Proporciona una descripci&oacute;n v&aacute;lida.</div>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
+					<button type="submit" class="btn btn-primary">Actualizar</button>
+				</div>
+			</form>
+			</div>
+		</div>
+	</div>
+	
+
+
+	<script type="text/javascript">
+		$(document).ready(function(){
+
+			$('table .delete').on('click',function(){
+				var id = $(this).parent().find('#id').val();
+				$('#deleteModal #id').val(id);
+				$('#deleteModal').modal('show');
+			});
+			
+			$('table .edit').on('click',function(){
+				var id = $(this).parent().find('#idEdit').val();
+				$('#editModel').modal('show');
+				$.ajax({
+					type: 'GET',
+					url: '/find/error'+id,
+					success: function(objeto){
+						$('#editModel #clave').attr("value",objeto.clave.trim());
+						$('#editModel #intentos').attr("value",objeto.intentos);
+						$('#editModel #persistencia').attr("value",objeto.persistencia.trim());
+						$('#editModel #descripcion').attr("value",objeto.descripcion.trim());
+						
+						$("#editModel #etapa option[selected]").val(objeto.etapa.trim());
+						$("#editModel #etapa option")[0].attributes[0].value=objeto.etapa.trim();
+						$("#editModel #etapa option")[0].innerHTML=objeto.etapaDesc.trim();
+
+					}
+				});
+			});
+		});
+
+		(function() {
+			'use strict'
+		
+			// Obtener todos los formularios a los que queremos aplicar estilos de validación de Bootstrap personalizados
+			var forms = document.querySelectorAll('.needs-validation')
+		
+			// Bucle sobre ellos y evitar el envío
+			Array.prototype.slice.call(forms)
+				.forEach(function(form) {
+					form.addEventListener('submit', function(event) {
+						if (!form.checkValidity()) {
+							event.preventDefault()
+							event.stopPropagation()
+						}
+		
+						form.classList.add('was-validated')
+					}, false)
+				})
+		})()
+	</script>
 </body>
 </html>
