style texto rango de fechas

--- a/src/main/resources/templates/dashboard/ventas.html
+++ b/src/main/resources/templates/dashboard/ventas.html
@@ -55,9 +55,9 @@
 											</div>
 										</div>
 									</div>
-									<nav class="navbar  bg-info">
+									<nav class="navbar bg-transparent shadow-none p-0">
 										<div class="container-fluid justify-content-center">
-											<a class="navbar-brand text-white fs-5 text-date-chart" href="#">del 01 de Enero al 31 de Diciembre 2022</a>
+											<a class="navbar-brand text-info fw-bold fs-5 text-date-chart text-wrap text-center" href="#">del 01 de Enero al 31 de Diciembre 2022</a>
 										</div>
 									</nav>
 									<button type="button" class="btn btn-dark mt-3">APLICAR</button>
@@ -172,9 +172,9 @@
 											</div>
 										</div>
 									</div>
-									<nav class="navbar  bg-info">
+									<nav class="navbar bg-transparent shadow-none p-0">
 										<div class="container-fluid justify-content-center">
-											<a class="navbar-brand text-white fs-5 text-date-chart" href="#">del 01 de Enero al 31 de Diciembre 2022</a>
+											<a class="navbar-brand text-info fw-bold fs-5 text-date-chart text-wrap text-center" href="#">del 01 de Enero al 31 de Diciembre 2022</a>
 										</div>
 									</nav>
 									<button type="button" class="btn btn-dark mt-3">APLICAR</button>
@@ -232,9 +232,9 @@
 											</div>
 										</div>
 									</div>
-									<nav class="navbar  bg-info">
+									<nav class="navbar bg-transparent shadow-none p-0">
 										<div class="container-fluid justify-content-center">
-											<a class="navbar-brand text-white fs-5 text-date-chart" href="#">del 01 de Enero al 31 de Diciembre 2022</a>
+											<a class="navbar-brand text-info fw-bold fs-5 text-date-chart text-wrap text-center" href="#">del 01 de Enero al 31 de Diciembre 2022</a>
 										</div>
 									</nav>
 									<button type="button" class="btn btn-dark mt-3">APLICAR</button>
