--- a/src/main/resources/static/resources/css/argon-dashboard.css
+++ b/src/main/resources/static/resources/css/argon-dashboard.css
@@ -28,13 +28,13 @@
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
   --bs-primary: var(--color-primary);
-  --bs-secondary: #8392ab;
-  --bs-success: #2dce89;
-  --bs-info: #11cdef;
-  --bs-warning: #fb6340;
-  --bs-danger: #f5365c;
-  --bs-light: #e9ecef;
-  --bs-dark: #344767;
+  --bs-secondary: var(--color-secondary);
+  --bs-success: #var(--color-success);
+  --bs-info: var(--color-info);
+  --bs-warning: var(--color-warning);
+  --bs-danger: var(--color-danger);
+  --bs-light: var(--color-light);
+  --bs-dark: var(--color-dark);
   --bs-white: #fff;
   --bs-primary-rgb: 33, 154, 226;
   --bs-secondary-rgb: 131, 146, 171;
@@ -2545,99 +2545,99 @@ progress {
 }
 
 .table-primary {
-  --bs-table-color: #000;
+  --bs-table-color: var(--color-dark);
   --bs-table-bg: var(--color-primary);
   --bs-table-border-color: #c9cce1;
   --bs-table-striped-bg: #d4d8ee;
-  --bs-table-striped-color: #000;
+  --bs-table-striped-color: var(--color-dark);
   --bs-table-active-bg: #c9cce1;
-  --bs-table-active-color: #000;
+  --bs-table-active-color: var(--color-dark);
   --bs-table-hover-bg: #ced2e7;
-  --bs-table-hover-color: #000;
+  --bs-table-hover-color: var(--color-dark);
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
 }
 
 .table-secondary {
-  --bs-table-color: #000;
+  --bs-table-color: var(--color-dark);
   --bs-table-bg: #e6e9ee;
   --bs-table-border-color: #cfd2d6;
   --bs-table-striped-bg: #dbdde2;
-  --bs-table-striped-color: #000;
+  --bs-table-striped-color: var(--color-dark);
   --bs-table-active-bg: #cfd2d6;
-  --bs-table-active-color: #000;
+  --bs-table-active-color: var(--color-dark);
   --bs-table-hover-bg: #d5d8dc;
-  --bs-table-hover-color: #000;
+  --bs-table-hover-color: var(--color-dark);
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
 }
 
 .table-success {
-  --bs-table-color: #000;
+  --bs-table-color: var(--color-dark);
   --bs-table-bg: #d5f5e7;
   --bs-table-border-color: #c0ddd0;
   --bs-table-striped-bg: #cae9db;
-  --bs-table-striped-color: #000;
+  --bs-table-striped-color: var(--color-dark);
   --bs-table-active-bg: #c0ddd0;
-  --bs-table-active-color: #000;
+  --bs-table-active-color: var(--color-dark);
   --bs-table-hover-bg: #c5e3d6;
-  --bs-table-hover-color: #000;
+  --bs-table-hover-color: var(--color-dark);
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
 }
 
 .table-info {
-  --bs-table-color: #000;
+  --bs-table-color: var(--color-dark);
   --bs-table-bg: #cff5fc;
   --bs-table-border-color: #badde3;
   --bs-table-striped-bg: #c5e9ef;
-  --bs-table-striped-color: #000;
+  --bs-table-striped-color: var(--color-dark);
   --bs-table-active-bg: #badde3;
-  --bs-table-active-color: #000;
+  --bs-table-active-color: var(--color-dark);
   --bs-table-hover-bg: #bfe3e9;
-  --bs-table-hover-color: #000;
+  --bs-table-hover-color: var(--color-dark);
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
 }
 
 .table-warning {
-  --bs-table-color: #000;
+  --bs-table-color: var(--color-dark);
   --bs-table-bg: #fee0d9;
   --bs-table-border-color: #e5cac3;
   --bs-table-striped-bg: #f1d5ce;
-  --bs-table-striped-color: #000;
+  --bs-table-striped-color: var(--color-dark);
   --bs-table-active-bg: #e5cac3;
-  --bs-table-active-color: #000;
+  --bs-table-active-color: var(--color-dark);
   --bs-table-hover-bg: #ebcfc9;
-  --bs-table-hover-color: #000;
+  --bs-table-hover-color: var(--color-dark);
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
 }
 
 .table-danger {
-  --bs-table-color: #000;
+  --bs-table-color: var(--color-dark);
   --bs-table-bg: #fdd7de;
   --bs-table-border-color: #e4c2c8;
   --bs-table-striped-bg: #f0ccd3;
-  --bs-table-striped-color: #000;
+  --bs-table-striped-color: var(--color-dark);
   --bs-table-active-bg: #e4c2c8;
-  --bs-table-active-color: #000;
+  --bs-table-active-color: var(--color-dark);
   --bs-table-hover-bg: #eac7cd;
-  --bs-table-hover-color: #000;
+  --bs-table-hover-color: var(--color-dark);
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
 }
 
 .table-light {
-  --bs-table-color: #000;
+  --bs-table-color: var(--color-dark);
   --bs-table-bg: #e9ecef;
   --bs-table-border-color: #d2d4d7;
   --bs-table-striped-bg: #dde0e3;
-  --bs-table-striped-color: #000;
+  --bs-table-striped-color: var(--color-dark);
   --bs-table-active-bg: #d2d4d7;
-  --bs-table-active-color: #000;
+  --bs-table-active-color: var(--color-dark);
   --bs-table-hover-bg: #d8dadd;
-  --bs-table-hover-color: #000;
+  --bs-table-hover-color: var(--color-dark);
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
 }
@@ -2912,7 +2912,7 @@ textarea.form-control-lg {
 }
 
 .form-select:focus {
-  border-color: #5e72e4;
+  border-color: var(--color-info);
   outline: 0;
   box-shadow: 0 3px 9px rgba(50, 50, 9, 0), 3px 4px 8px rgba(94, 114, 228, 0.1);
 }
@@ -3374,8 +3374,8 @@ textarea.form-control-lg {
   padding: 0.25rem 0.5rem;
   margin-top: .1rem;
   font-size: 0.875rem;
-  color: #000;
-  background-color: rgba(102, 212, 50, 0.9);
+  color: var(--color-dark);
+  background-color: var(--color-success);
   border-radius: 0.5rem;
 }
 
@@ -3489,7 +3489,7 @@ textarea.form-control.is-valid {
   padding: 0.25rem 0.5rem;
   margin-top: .1rem;
   font-size: 0.875rem;
-  color: #000;
+  color: var(--color-dark);
   background-color: --color-danger;
   border-radius: 0.5rem;
 }
@@ -3669,120 +3669,120 @@ fieldset:disabled .btn {
 }
 
 .btn-primary {
-  --bs-btn-color: #000;
-  --bs-btn-bg: var(--color-primary);;
-  --bs-btn-border-color: var(--color-primary);;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: var(--color-primary);;
-  --bs-btn-hover-border-color: var(--color-primary);;
+  --bs-btn-color: var(--color-dark);
+  --bs-btn-bg: var(--color-primary);
+  --bs-btn-border-color: var(--color-primary);
+  --bs-btn-hover-color: var(--color-dark);
+  --bs-btn-hover-bg: var(--color-primary);
+  --bs-btn-hover-border-color: var(--color-primary);
   --bs-btn-focus-shadow-rgb: 80, 97, 194;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: var(--color-primary);;
-  --bs-btn-active-border-color: var(--color-primary);;
+  --bs-btn-active-color: var(--color-dark);
+  --bs-btn-active-bg: var(--color-primary);
+  --bs-btn-active-border-color: var(--color-primary);
   --bs-btn-active-shadow: none;
-  --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: var(--color-primary);;
-  --bs-btn-disabled-border-color: var(--color-primary);;
+  --bs-btn-disabled-color: var(--color-dark);
+  --bs-btn-disabled-bg: var(--color-primary);
+  --bs-btn-disabled-border-color: var(--color-primary);
 }
 
 .btn-secondary {
-  --bs-btn-color: #000;
+  --bs-btn-color: var(--color-dark);
   --bs-btn-bg: #8392ab;
   --bs-btn-border-color: #8392ab;
-  --bs-btn-hover-color: #000;
+  --bs-btn-hover-color: var(--color-dark);
   --bs-btn-hover-bg: #8392ab;
   --bs-btn-hover-border-color: #8392ab;
   --bs-btn-focus-shadow-rgb: 111, 124, 145;
-  --bs-btn-active-color: #000;
+  --bs-btn-active-color: var(--color-dark);
   --bs-btn-active-bg: #8392ab;
   --bs-btn-active-border-color: #8392ab;
   --bs-btn-active-shadow: none;
-  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-color: var(--color-dark);
   --bs-btn-disabled-bg: #8392ab;
   --bs-btn-disabled-border-color: #8392ab;
 }
 
 .btn-success {
-  --bs-btn-color: #000;
+  --bs-btn-color: var(--color-dark);
   --bs-btn-bg: --color-success;
   --bs-btn-border-color: --color-success;
-  --bs-btn-hover-color: #000;
+  --bs-btn-hover-color: var(--color-dark);
   --bs-btn-hover-bg: --color-success;
   --bs-btn-hover-border-color: --color-success;
   --bs-btn-focus-shadow-rgb: 38, 175, 116;
-  --bs-btn-active-color: #000;
+  --bs-btn-active-color: var(--color-dark);
   --bs-btn-active-bg: --color-success;
   --bs-btn-active-border-color: --color-success;
   --bs-btn-active-shadow: none;
-  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-color: var(--color-dark);
   --bs-btn-disabled-bg: --color-success;
   --bs-btn-disabled-border-color: --color-success;
 }
 
 .btn-info {
-  --bs-btn-color: #000;
+  --bs-btn-color: var(--color-dark);
   --bs-btn-bg: --color-info;
   --bs-btn-border-color: --color-info;
-  --bs-btn-hover-color: #000;
+  --bs-btn-hover-color: var(--color-dark);
   --bs-btn-hover-bg: --color-info;
   --bs-btn-hover-border-color: --color-info;
   --bs-btn-focus-shadow-rgb: 14, 174, 203;
-  --bs-btn-active-color: #000;
+  --bs-btn-active-color: var(--color-dark);
   --bs-btn-active-bg: --color-info;
   --bs-btn-active-border-color: --color-info;
   --bs-btn-active-shadow: none;
-  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-color: var(--color-dark);
   --bs-btn-disabled-bg: --color-info;
   --bs-btn-disabled-border-color: --color-info;
 }
 
 .btn-warning {
-  --bs-btn-color: #000;
+  --bs-btn-color: var(--color-dark);
   --bs-btn-bg: --color-warning;
   --bs-btn-border-color: --color-warning;
-  --bs-btn-hover-color: #000;
+  --bs-btn-hover-color: var(--color-dark);
   --bs-btn-hover-bg: --color-warning;
   --bs-btn-hover-border-color: --color-warning;
   --bs-btn-focus-shadow-rgb: 213, 84, 54;
-  --bs-btn-active-color: #000;
+  --bs-btn-active-color: var(--color-dark);
   --bs-btn-active-bg: --color-warning;
   --bs-btn-active-border-color: --color-warning;
   --bs-btn-active-shadow: none;
-  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-color: var(--color-dark);
   --bs-btn-disabled-bg: --color-warning;
   --bs-btn-disabled-border-color: --color-warning;
 }
 
 .btn-danger {
-  --bs-btn-color: #000;
+  --bs-btn-color: var(--color-dark);
   --bs-btn-bg: --color-danger;
   --bs-btn-border-color: --color-danger;
-  --bs-btn-hover-color: #000;
+  --bs-btn-hover-color: var(--color-dark);
   --bs-btn-hover-bg: --color-danger;
   --bs-btn-hover-border-color: --color-danger;
   --bs-btn-focus-shadow-rgb: 208, 46, 78;
-  --bs-btn-active-color: #000;
+  --bs-btn-active-color: var(--color-dark);
   --bs-btn-active-bg: --color-danger;
   --bs-btn-active-border-color: --color-danger;
   --bs-btn-active-shadow: none;
-  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-color: var(--color-dark);
   --bs-btn-disabled-bg: --color-danger;
   --bs-btn-disabled-border-color: --color-danger;
 }
 
 .btn-light {
-  --bs-btn-color: #000;
+  --bs-btn-color: var(--color-dark);
   --bs-btn-bg: --color-light;
   --bs-btn-border-color: --color-light;
-  --bs-btn-hover-color: #000;
+  --bs-btn-hover-color: var(--color-dark);
   --bs-btn-hover-bg: --color-light;
   --bs-btn-hover-border-color: --color-light;
   --bs-btn-focus-shadow-rgb: 198, 201, 203;
-  --bs-btn-active-color: #000;
+  --bs-btn-active-color: var(--color-dark);
   --bs-btn-active-bg: --color-light;
   --bs-btn-active-border-color: --color-light;
   --bs-btn-active-shadow: none;
-  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-color: var(--color-dark);
   --bs-btn-disabled-bg: --color-light;
   --bs-btn-disabled-border-color: --color-light;
 }
@@ -3805,18 +3805,18 @@ fieldset:disabled .btn {
 }
 
 .btn-white {
-  --bs-btn-color: #000;
+  --bs-btn-color: var(--color-dark);
   --bs-btn-bg: #fff;
   --bs-btn-border-color: #fff;
-  --bs-btn-hover-color: #000;
+  --bs-btn-hover-color: var(--color-dark);
   --bs-btn-hover-bg: white;
   --bs-btn-hover-border-color: white;
   --bs-btn-focus-shadow-rgb: 217, 217, 217;
-  --bs-btn-active-color: #000;
+  --bs-btn-active-color: var(--color-dark);
   --bs-btn-active-bg: white;
   --bs-btn-active-border-color: white;
   --bs-btn-active-shadow: none;
-  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-color: var(--color-dark);
   --bs-btn-disabled-bg: #fff;
   --bs-btn-disabled-border-color: #fff;
 }
@@ -3824,11 +3824,11 @@ fieldset:disabled .btn {
 .btn-outline-primary {
   --bs-btn-color: var(--color-primary);;
   --bs-btn-border-color: var(--color-primary);;
-  --bs-btn-hover-color: #000;
+  --bs-btn-hover-color: var(--color-dark);
   --bs-btn-hover-bg: var(--color-primary);;
   --bs-btn-hover-border-color: var(--color-primary);;
   --bs-btn-focus-shadow-rgb: 94, 114, 228;
-  --bs-btn-active-color: #000;
+  --bs-btn-active-color: var(--color-dark);
   --bs-btn-active-bg: var(--color-primary);;
   --bs-btn-active-border-color: var(--color-primary);;
   --bs-btn-active-shadow: none;
@@ -3840,11 +3840,11 @@ fieldset:disabled .btn {
 .btn-outline-secondary {
   --bs-btn-color: #8392ab;
   --bs-btn-border-color: #8392ab;
-  --bs-btn-hover-color: #000;
+  --bs-btn-hover-color: var(--color-dark);
   --bs-btn-hover-bg: #8392ab;
   --bs-btn-hover-border-color: #8392ab;
   --bs-btn-focus-shadow-rgb: 131, 146, 171;
-  --bs-btn-active-color: #000;
+  --bs-btn-active-color: var(--color-dark);
   --bs-btn-active-bg: #8392ab;
   --bs-btn-active-border-color: #8392ab;
   --bs-btn-active-shadow: none;
@@ -3856,11 +3856,11 @@ fieldset:disabled .btn {
 .btn-outline-success {
   --bs-btn-color: #2dce89;
   --bs-btn-border-color: #2dce89;
-  --bs-btn-hover-color: #000;
+  --bs-btn-hover-color: var(--color-dark);
   --bs-btn-hover-bg: #2dce89;
   --bs-btn-hover-border-color: #2dce89;
   --bs-btn-focus-shadow-rgb: 45, 206, 137;
-  --bs-btn-active-color: #000;
+  --bs-btn-active-color: var(--color-dark);
   --bs-btn-active-bg: #2dce89;
   --bs-btn-active-border-color: #2dce89;
   --bs-btn-active-shadow: none;
@@ -3872,11 +3872,11 @@ fieldset:disabled .btn {
 .btn-outline-info {
   --bs-btn-color: #11cdef;
   --bs-btn-border-color: #11cdef;
-  --bs-btn-hover-color: #000;
+  --bs-btn-hover-color: var(--color-dark);
   --bs-btn-hover-bg: #11cdef;
   --bs-btn-hover-border-color: #11cdef;
   --bs-btn-focus-shadow-rgb: 17, 205, 239;
-  --bs-btn-active-color: #000;
+  --bs-btn-active-color: var(--color-dark);
   --bs-btn-active-bg: #11cdef;
   --bs-btn-active-border-color: #11cdef;
   --bs-btn-active-shadow: none;
@@ -3888,11 +3888,11 @@ fieldset:disabled .btn {
 .btn-outline-warning {
   --bs-btn-color: #fb6340;
   --bs-btn-border-color: #fb6340;
-  --bs-btn-hover-color: #000;
+  --bs-btn-hover-color: var(--color-dark);
   --bs-btn-hover-bg: #fb6340;
   --bs-btn-hover-border-color: #fb6340;
   --bs-btn-focus-shadow-rgb: 251, 99, 64;
-  --bs-btn-active-color: #000;
+  --bs-btn-active-color: var(--color-dark);
   --bs-btn-active-bg: #fb6340;
   --bs-btn-active-border-color: #fb6340;
   --bs-btn-active-shadow: none;
@@ -3904,11 +3904,11 @@ fieldset:disabled .btn {
 .btn-outline-danger {
   --bs-btn-color: #f5365c;
   --bs-btn-border-color: #f5365c;
-  --bs-btn-hover-color: #000;
+  --bs-btn-hover-color: var(--color-dark);
   --bs-btn-hover-bg: #f5365c;
   --bs-btn-hover-border-color: #f5365c;
   --bs-btn-focus-shadow-rgb: 245, 54, 92;
-  --bs-btn-active-color: #000;
+  --bs-btn-active-color: var(--color-dark);
   --bs-btn-active-bg: #f5365c;
   --bs-btn-active-border-color: #f5365c;
   --bs-btn-active-shadow: none;
@@ -3920,11 +3920,11 @@ fieldset:disabled .btn {
 .btn-outline-light {
   --bs-btn-color: #e9ecef;
   --bs-btn-border-color: #e9ecef;
-  --bs-btn-hover-color: #000;
+  --bs-btn-hover-color: var(--color-dark);
   --bs-btn-hover-bg: #e9ecef;
   --bs-btn-hover-border-color: #e9ecef;
   --bs-btn-focus-shadow-rgb: 233, 236, 239;
-  --bs-btn-active-color: #000;
+  --bs-btn-active-color: var(--color-dark);
   --bs-btn-active-bg: #e9ecef;
   --bs-btn-active-border-color: #e9ecef;
   --bs-btn-active-shadow: none;
@@ -3952,11 +3952,11 @@ fieldset:disabled .btn {
 .btn-outline-white {
   --bs-btn-color: #fff;
   --bs-btn-border-color: #fff;
-  --bs-btn-hover-color: #000;
+  --bs-btn-hover-color: var(--color-dark);
   --bs-btn-hover-bg: #fff;
   --bs-btn-hover-border-color: #fff;
   --bs-btn-focus-shadow-rgb: 255, 255, 255;
-  --bs-btn-active-color: #000;
+  --bs-btn-active-color: var(--color-dark);
   --bs-btn-active-bg: #fff;
   --bs-btn-active-border-color: #fff;
   --bs-btn-active-shadow: none;
@@ -6477,7 +6477,7 @@ fieldset:disabled .btn {
 
 .modal-backdrop {
   --bs-backdrop-zindex: 1040;
-  --bs-backdrop-bg: #000;
+  --bs-backdrop-bg: var(--color-dark);
   --bs-backdrop-opacity: 0.5;
   position: fixed;
   top: 0;
@@ -6721,7 +6721,7 @@ fieldset:disabled .btn {
   --bs-tooltip-margin: 0;
   --bs-tooltip-font-size: 0.875rem;
   --bs-tooltip-color: #fff;
-  --bs-tooltip-bg: #000;
+  --bs-tooltip-bg: var(--color-dark);
   --bs-tooltip-border-radius: 0.5rem;
   --bs-tooltip-opacity: 0.9;
   --bs-tooltip-arrow-width: 0.8rem;
@@ -7243,11 +7243,11 @@ fieldset:disabled .btn {
 }
 
 .carousel-dark .carousel-indicators [data-bs-target] {
-  background-color: #000;
+  background-color: var(--color-dark);
 }
 
 .carousel-dark .carousel-caption {
-  color: #000;
+  color: var(--color-dark);
 }
 
 .spinner-grow,
@@ -7870,7 +7870,7 @@ fieldset:disabled .btn {
   z-index: 1040;
   width: 100vw;
   height: 100vh;
-  background-color: #000;
+  background-color: var(--color-dark);
 }
 
 .offcanvas-backdrop.fade {
@@ -7943,7 +7943,7 @@ fieldset:disabled .btn {
 }
 
 .placeholder-wave {
-  mask-image: linear-gradient(130deg, #000 55%, rgba(0, 0, 0, 0.8) 75%, #000 95%);
+  mask-image: linear-gradient(130deg, var(--color-dark) 55%, rgba(0, 0, 0, 0.8) 75%, var(--color-dark) 95%);
   mask-size: 200% 100%;
   animation: placeholder-wave 2s linear infinite;
 }
@@ -7961,37 +7961,37 @@ fieldset:disabled .btn {
 }
 
 .text-bg-primary {
-  color: #000 !important;
+  color: var(--color-dark) !important;
   background-color: RGBA(94, 114, 228, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-secondary {
-  color: #000 !important;
+  color: var(--color-dark) !important;
   background-color: RGBA(131, 146, 171, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-success {
-  color: #000 !important;
+  color: var(--color-dark) !important;
   background-color: RGBA(45, 206, 137, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-info {
-  color: #000 !important;
+  color: var(--color-dark) !important;
   background-color: RGBA(17, 205, 239, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-warning {
-  color: #000 !important;
+  color: var(--color-dark) !important;
   background-color: RGBA(251, 99, 64, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-danger {
-  color: #000 !important;
+  color: var(--color-dark) !important;
   background-color: RGBA(245, 54, 92, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-light {
-  color: #000 !important;
+  color: var(--color-dark) !important;
   background-color: RGBA(233, 236, 239, var(--bs-bg-opacity, 1)) !important;
 }
 
@@ -8001,7 +8001,7 @@ fieldset:disabled .btn {
 }
 
 .text-bg-white {
-  color: #000 !important;
+  color: var(--color-dark) !important;
   background-color: RGBA(255, 255, 255, var(--bs-bg-opacity, 1)) !important;
 }
 
@@ -26666,7 +26666,7 @@ span.flatpickr-weekday {
   border: 1px solid #D9D9D9;
   border-radius: 3px;
   background: #fff;
-  color: #000;
+  color: var(--color-dark);
   padding: 5px;
   text-align: center;
   white-space: nowrap;
